--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           "properties": {
             "title": "«Легенды Москвы",
             "placeId": "moscow_legends",
-            "detailsUrl": "./places/moscow_legends.json"
+            "detailsUrl": "{% static "places/moscow_legends.json" %}"
           }
         },
         {
@@ -64,7 +64,7 @@
           "properties": {
             "title": "Крыши24.рф",
             "placeId": "roofs24",
-            "detailsUrl": "./places/roofs24.json"
+            "detailsUrl": "{% static "places/roofs24.json" %}"
           }
         }
       ]
