--- a/index.html
+++ b/index.html
@@ -43,33 +43,25 @@
     {
       "type": "FeatureCollection",
       "features": [
+      {% for post in posts %}
         {
           "type": "Feature",
           "geometry": {
             "type": "Point",
-            "coordinates": [37.62, 55.793676]
+            "coordinates": [{{ post.x }}, {{ post.y }}]
           },
           "properties": {
-            "title": "«Легенды Москвы",
-            "placeId": "moscow_legends",
-            "detailsUrl": "static/places/1_json_data.json"
-          }
-        },
-        {
-          "type": "Feature",
-          "geometry": {
-            "type": "Point",
-            "coordinates": [37.64, 55.753676]
-          },
-          "properties": {
-            "title": "Крыши24.рф",
-            "placeId": "roofs24",
-            "detailsUrl": "static/places/2_json_data.json"
+            "title": "{{ post.title }}",
+            "placeId": "{{ post.id }}",
+            "detailsUrl": "static/places/{{ post.id }}_json_data.json"
           }
         }
+        {% if not post.id == last.id %}
+            ,
+        {% endif %}
+      {% endfor %}
       ]
     }
-
   </script>
 
   <script id="app-template" type="text/template">
